- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 4.15.0-beta1
 - 
    None
 
- 
        9fbd1c26b052396a7c97c7100919f466365e50ce (qt-creator/qt-creator/4.15)
 
Even after Years of having that icon in front of my nose, I cannot get used to it. Shall we make make the root icon of CMake projects look like those of other projects?
Like this:
![]()
| For Gerrit Dashboard: QTCREATORBUG-25397 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 336702,2 | CMakeProjectManager: Use the "gear" as project root item icon overlay | 4.15 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |