CMakeProjectManager: Use the "gear" as project root item icon overlay

Replace and remove the pixel accumulation called "projectexplorer.png".

Fixes: QTCREATORBUG-25397
Change-Id: Idbf5e634bbe98d6eb9cc2cbaafd7f631cac18a83
Reviewed-by: Cristian Adam <cristian.adam@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>